--- a/docs/examples/starter-auto/literature.bib
+++ b/docs/examples/starter-auto/literature.bib
@@ -6,3 +6,11 @@
     urldate		= {2019-08-20},
     url			= {https://www.hanselman.com/blog/IMissMicrosoftEncarta.aspx}
 }
+
+@online{spacex_com_about,
+    author		= "{SpaceX}",
+    title		= {About SpaceX},
+    shorttitle	= {About SpaxeX},
+    urldate		= {2019-08-20},
+    url			= {https://www.spacex.com/about}
+}
