Add default for date and location

--- a/src/udhbwvst.cls
+++ b/src/udhbwvst.cls
@@ -601,7 +601,9 @@
   company logo/.store in      = \dhbwGetCompanyLogo,
   lecturer/.store in          = \dhbwGetLecturer,
   location/.store in          = \dhbwGetLocation,
+  location                    = Villingen-Schwenningen,
   date/.store in              = \dhbwGetDate,
+  date                        = \today,
   longest acronym/.store in   = \dhbwGetLongestAcronym,
   longest acronym             = xD,
   acronyms/.store in          = \dhbwGetAcronyms,
