--- a/docs/examples/starter-recommended/starter-recommended.tex
+++ b/docs/examples/starter-recommended/starter-recommended.tex
@@ -23,9 +23,7 @@
     company logo    = company-logo.png,         % Path to the logo of the authors employer.
     lecturer        = Prof. Dr. Frank Staab,    % Name of the lecturer of the author.
     location        = Villingen-Schwenningen,   % Name of the location where the author signs the independence notice.
-    date            = \today,                   % When the author signs the independence notice.
-    longest acronym = API,                      % The longest acronym you defined below (used for formatting).
-    acronyms        = {}
+    date            = \today                    % When the author signs the independence notice.
 }
 
 \begin{document}
