fix: add invisible page numbers (#57)

--- a/src/udhbwvst.cls
+++ b/src/udhbwvst.cls
@@ -526,7 +526,8 @@
 
 \newcommand{\dhbwSetFrontMatter}{%
   \selectlanguage{ngerman}
-  \pagenumbering{gobble}
+  \pagenumbering{Alph}
+  \pagestyle{empty}
 }
 
 \newcommand{\dhbwPrintTitle}{%
