chore: add appendices to examples

--- a/examples/starter-advanced/starter-advanced.tex
+++ b/examples/starter-advanced/starter-advanced.tex
@@ -47,6 +47,13 @@
 
 Your text here.\ifootcite{example_online}
 
+\begin{dhbwappendices}
+
+    \dhbwAppendix{appendix_1}
+    This is an appendix.
+
+\end{dhbwappendices}
+
 \dhbwPrintBibliography
 \dhbwPrintIndependenceNotice
 
