--- a/examples/full/full.tex
+++ b/examples/full/full.tex
@@ -147,4 +147,16 @@ Fusce ullamcorper fermentum nibh sit amet pharetra. Curabitur rhoncus gravida do
 
 \blinddocument
 
+\autoref{second_appendix} zeigt, dass es einen \autoref{test} geben muss.
+
+\begin{dhbwappendices}
+
+    \dhbwAppendix{test}
+    \lipsum
+
+    \dhbwAppendix{second_appendix}
+    \lipsum
+
+\end{dhbwappendices}
+
 \end{document}
