fix: remove colon after last author in bib (#61)

--- a/src/udhbwvst.cls
+++ b/src/udhbwvst.cls
@@ -331,7 +331,7 @@
     L{\dimexpr0.25\textwidth-\tabcolsep\relax}
     L{\dimexpr0.75\textwidth-\tabcolsep\relax}
     @{}}}
-  {\end{longtable}}{\anchorlang{\usebibmacro{tabular:sortname}}\addcolon &
+  {\end{longtable}}{\anchorlang{\usebibmacro{tabular:sortname}} &
   \driver{\usebibmacro{tabular:omitsortname}} \\}
 
 % Sort by Author->Year->Month->Day->Title
