fix: remove final dot in bib entries (#61)

--- a/src/udhbwvst.cls
+++ b/src/udhbwvst.cls
@@ -641,6 +641,7 @@
 
 \newcommand{\dhbwPrintBibliography}{%
   \DeclareDelimFormat{multinamedelim}{\newline}
+  \renewcommand*{\finentrypunct}{}
   \newpage
   \singlespacing
   \phantomsection
