chore: update entries for multi author tests

--- a/examples/full/literature.bib
+++ b/examples/full/literature.bib
@@ -8,7 +8,7 @@
 }
 
 @online{spacex_com_about,
-    author		= "{SpaceX}",
+    author		= {The First Author and Another Author and Other Author and Fourth Author},
     title		= {About SpaceX},
     shorttitle	= {About SpaxeX},
     urldate		= {2019-08-20},
@@ -67,7 +67,7 @@
 }
 
 @online{iot_standard_war,
-    author		= {McCarthy, Kieren},
+    author		= {Sho, Lop and Pe Lu and Max Mauer},
     title		= {The Internet of Things becomes the Game of Thrones in standards war},
     shorttitle	= {IoT Standard Krieg},
     date		= {2015-05-21},
