--- a/examples/full/full.tex
+++ b/examples/full/full.tex
@@ -7,7 +7,8 @@
     print-lot       = true,             % print list of tables
     print-lol       = true,             % print list of listings
     bib-file        = literature.bib,   % path to bibliography file
-    plantuml        = true              % use plantuml
+    plantuml        = true,             % use plantuml
+    title-style     = default           % title page style
 ]{udhbwvst}
 
 \dhbwSetup{%
