chore(examples): add longtable demo

--- a/examples/full/full.tex
+++ b/examples/full/full.tex
@@ -130,6 +130,76 @@ Nunc tincidunt at tortor a maximus. Integer lobortis libero nec vehicula consect
 
 In tempor tincidunt leo ac tristique. Quisque viverra fringilla diam, vel rutrum turpis tempor non. Ut varius vulputate arcu vitae tincidunt. Nulla auctor lorem iaculis, vestibulum velit mollis, efficitur tortor. Praesent rutrum nulla id est consectetur ornare. Nam pretium, nisi ut porttitor auctor, neque leo \autoref{tab:mytable} rutrum magna, vel luctus velit orci eget lacus. Proin ante nibh, iaculis quis elit nec, sodales vehicula est. Donec consectetur velit ac ultrices venenatis. Morbi iaculis gravida arcu, nec imperdiet ex tincidunt ut.
 
+\subsection{Longtable demo}
+
+\begin{dhbwlongtable}{ | p{0.7\linewidth} | p{0.3\linewidth} | }{%
+    caption	= This is the caption,
+    label	= tab:mycoollabel
+}
+
+\hline
+\textbf{Column 1} & \textbf{Column 2} \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+This is a & test! \\ \hline
+
+\end{dhbwlongtable}
+
+Sed auctor neque sodales augue venenatis pharetra. Nunc purus felis, sollicitudin vitae congue quis, \autoref{tab:mycoollabel} sagittis quis mi. Pellentesque non ante id sapien venenatis facilisis. Integer finibus, enim tempor molestie tempor, sapien nisl dictum est, eu dapibus erat orci id dui.
+
 \section{Code}
 
 Sed auctor neque sodales augue venenatis pharetra. Nunc purus felis, sollicitudin vitae congue quis, sagittis quis mi. Pellentesque non ante id sapien venenatis facilisis. Integer finibus, enim tempor molestie tempor, sapien nisl dictum est, eu dapibus erat orci id dui. Cras sodales diam eget enim elementum venenatis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec mattis tristique purus, ut luctus augue dictum at. Donec condimentum lacinia felis, sed cursus tellus pulvinar vitae. Praesent aliquet felis ac vulputate malesuada. Duis malesuada velit vel dolor facilisis facilisis. Nunc laoreet felis in egestas semper. Suspendisse nec lectus mattis, lacinia ex eget, commodo neque. Nam nisl neque, accumsan suscipit pretium at, eleifend vel nibh. Duis sit amet turpis quis justo semper euismod. Pellentesque maximus porttitor mollis.
