chore(examples): add font-size class option

--- a/examples/starter-advanced/starter-advanced.tex
+++ b/examples/starter-advanced/starter-advanced.tex
@@ -8,7 +8,8 @@
     print-lol       = true,             % print list of listings
     bib-file        = literature.bib,   % path to bibliography file
     plantuml        = false,            % use plantuml
-    title-style     = default           % title page style
+    title-style     = default,          % title page style
+    font-size       = 12pt              % sets the font size
 ]{udhbwvst}
 
 \dhbwSetup{%
