feat: improve url linebreaks by loading xurl
https://ctan.org/tex-archive/macros/latex/contrib/xurl

--- a/src/udhbwvst.cls
+++ b/src/udhbwvst.cls
@@ -131,6 +131,8 @@
 \RequirePackage[title,titletoc]{appendix}
 \RequirePackage{rotating}
 \RequirePackage[absolute]{textpos}
+\RequirePackage{xurl} % for better url linebreaks
+
 
 % load optional packages
 
