chore(examples): add @article usage example

--- a/examples/full/full.tex
+++ b/examples/full/full.tex
@@ -221,6 +221,8 @@ Fusce ullamcorper fermentum nibh sit amet pharetra. Curabitur rhoncus gravida do
 
 \autoref{second_appendix} zeigt, dass es einen \autoref{test} geben muss.
 
+Artikel kann man auch zitieren.\ifootcite{linklabs_zwave_vs_zigbee}
+
 \begin{dhbwappendices}
 
     \dhbwAppendix{test}
