--- a/examples/full/literature.bib
+++ b/examples/full/literature.bib
@@ -157,11 +157,11 @@
     url			= {https://thesmartcave.com/z-wave-vs-zigbee-home-automation/}
 }
 
-@online{linklabs_zwave_vs_zigbee,
+@article{linklabs_zwave_vs_zigbee,
     author		= {Brian Ray},
     title		= {Z-Wave Vs. Zigbee},
-    shorttitle	= {ZigBee vs. Z-Wave LinkLabs},
-    date		= {2017-11-27},
-    urldate		= {2018-11-01},
-    url			= {https://www.link-labs.com/blog/z-wave-vs-zigbee}
+    shorttitle	= {LOL},
+    year		= {3000},
+    journal		= {Harvard Business Review},
+    pages		= {69--420}
 }
