chore(examples): add germanlaw bib entry example

--- a/examples/full/full.tex
+++ b/examples/full/full.tex
@@ -223,6 +223,8 @@ Fusce ullamcorper fermentum nibh sit amet pharetra. Curabitur rhoncus gravida do
 
 Artikel kann man auch zitieren.\ifootcite{linklabs_zwave_vs_zigbee}
 
+Gem.\ §2 Abs.\ 3 S.\ 3 BGB kann man auch Gesetze zitieren btw.\nocite{bgb}
+
 \begin{dhbwappendices}
 
     \dhbwAppendix{test}
