--- a/examples/full/literature.bib
+++ b/examples/full/literature.bib
@@ -165,3 +165,14 @@
     journal		= {Harvard Business Review},
     pages		= {69--420}
 }
+
+@germanlaw{bgbtest,
+    title = {Bürgerliches Gesetzbuch},
+    author = {oA},
+    shorttitle = {BGB},
+    lawsource = {Bundesgesetzblatt},
+    lawsourceyear = {2002},
+    lawvolume = {I},
+    lawfirstpage = {42},
+    lawdate = {2020-03-19}
+}
