chore(example): fix germanlaw test entry

--- a/examples/full/literature.bib
+++ b/examples/full/literature.bib
@@ -166,9 +166,9 @@
     pages		= {69--420}
 }
 
-@germanlaw{bgbtest,
+@germanlaw{bgb,
     title = {Bürgerliches Gesetzbuch},
-    author = {oA},
+    author = {o.A.},
     shorttitle = {BGB},
     lawsource = {Bundesgesetzblatt},
     lawsourceyear = {2002},
