chore(examples): use 'o.V.' instead of 'o.A.'

--- a/examples/full/literature.bib
+++ b/examples/full/literature.bib
@@ -168,7 +168,7 @@
 
 @germanlaw{bgb,
     title = {Bürgerliches Gesetzbuch},
-    author = {o.A.},
+    author = {o.V.},
     shorttitle = {BGB},
     lawsource = {Bundesgesetzblatt},
     lawsourceyear = {2002},
